tests/pass/match/empty_match.tox
fn main() {
    let a = 10;

    match a {
        
    };
}