tests/fail/call/object.tox
class Foo {}

fn main() {
    let foo = Foo{};
    foo(); //error: `foo` is not callable
}